--- a/src/composer.json
+++ b/src/composer.json
@@ -2,7 +2,10 @@
     "name": "didi/custom-php",
     "description": "This is my custom php app built from scratch",
     "require": {
-    	"php": ">=7.1.3"
+    	"php": ">=7.1.3",
+        "guzzlehttp/guzzle": "^7.2",
+        "spatie/laravel-collection-macros": "^6.1",
+        "nesbot/carbon": "^2.45"
     },
     "autoload": {
         "psr-4": {
